# meeting-scribe

./: .env.example  .gitignore  README.md  pyproject.toml  skills-lock.json
src/meeting_scribe/: app.py  minutes.py  transcribe.py
