[project]
name = "meeting-scribe"
version = "0.1.0"
description = "Generate meeting minutes and action items from audio using open- and closed-source models"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0",
    "gradio>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
    "transformers>=4.40",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "huggingface-hub>=0.20",
    "torch>=2.1",
]

[project.scripts]
meeting-scribe = "meeting_scribe.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meeting_scribe"]
